tests/miniJava/neg/006727_mutation.MiniJava
class java { public this void Main ( String [ ] java ) { { } } }
